correct wrapping blog psots

--- a/scss/main.css
+++ b/scss/main.css
@@ -1611,11 +1611,13 @@ header .bottom-nav-sub-sub-sublist ul a li::after {
 }
 #blog .blog_container {
   display: flex;
+  flex-wrap: wrap;
 }
 #blog .blog_container .article_slot {
   margin-right: 34px;
+  width: calc(33% - 34px);
 }
-#blog .blog_container .article_slot:last-of-type {
+#blog .blog_container .article_slot:nth-of-type(3n) {
   margin-right: 0;
 }
 #blog .blog_container .article_slot--img {
@@ -1715,9 +1717,6 @@ header .bottom-nav-sub-sub-sublist ul a li::after {
     min-width: 32%;
     margin-right: 1%;
   }
-  #blog .blog_container .article_slot:last-of-type {
-    margin-right: 0;
-  }
   #blog .blog_container .article_slot--img {
     overflow: hidden;
     width: 100%;
@@ -1739,10 +1738,22 @@ header .bottom-nav-sub-sub-sublist ul a li::after {
     min-width: 48%;
     margin-right: 2%;
   }
+  #blog .blog_container .article_slot:nth-of-type(even) {
+    margin-right: 0;
+  }
+  #blog .blog_container .article_slot:nth-of-type(odd) {
+    margin-right: 2%;
+  }
 }
 @media (max-width: 760px) {
   #blog .blog_container .article_slot {
     width: 100%;
+    margin-right: 0;
+  }
+  #blog .blog_container .article_slot:nth-of-type(even) {
+    margin-right: 0;
+  }
+  #blog .blog_container .article_slot:nth-of-type(odd) {
     margin-right: 0;
   }
   #blog .blog_container .article_slot--img {
